# rustler

./: .gitignore  ACCOUNT_SUBTYPES_IMPLEMENTATION.md  BALANCE_GRAPH_FIX.md  BOTH_ACCOUNT_TYPES_IMPLEMENTATION.md  CACHING_FIX.md  Cargo.toml  DECIMAL_SEPARATOR_FIX.md  DOCKER.md  Dockerfile  FIREFLY_DEPOSIT_FIX.md  FIREFLY_UPLOAD_FIX.md  INITIAL_BALANCE_EXCLUSION.md  INITIAL_BALANCE_FIX.md  MONTHLY_EXPENSES_FIX.md  MONTHLY_INCOME_FIX.md  MULTIPART_FORM_DATA_FIX.md  MULTIPART_FORM_DATA_FIX_UPDATE.md  PWA_CACHING_FIX.md  PWA_IMPLEMENTATION_SUMMARY.md  QUICK_ADD_TRANSACTION.md  README.md  SCREEN_SCALING_FIX.md  SUBTYPE_DISPLAY_FIX.md  SYNC_INSTANCES.md  TESTING.md  TESTING_DARK_MODE.md  UI_IMPROVEMENTS.md  docker-compose.yml  sync_instances.sh  test_account_subtypes.sh  test_all_account_types.sh  test_amex_premium_graph.sh  test_asset_serving.sh  test_balance_graph.sh  test_both_account_types.sh  test_budget_transfers.sh  test_budget_view_transactions.sh  test_category_rename.sh  test_credit_card_bug.sh  test_csv_import_dates.sh  (+26 more)
.github/: release.yml
.github/workflows/: docker-build.yml  helm-release.yml  release-please.yml  release.yml
.junie/: guidelines.md
.sqlx/: query-1e1d22788757785e508527db75222e7041de996768e8a67c1072b038a2c41baa.json  query-59b3b95562d27343b40cb04f55b23a1df05ad510ffc17757b81b30956bd632bc.json  query-9984240fe67871a5091cf2dbbe031111d2d01fa29ab6823adcaef2cb2b8b751e.json  query-dfa9bf009b28233ad1370402e1148fba6b8552ed7233245bb34dfb8167860617.json
charts/rustler/: .helmignore  Chart.yaml  README.md  values.yaml
firefly-tracker/: Dockerfile  README.md
firefly-tracker/backend/: Cargo.toml
firefly-tracker/backend/src/: main.rs
firefly-tracker/backend/src/api/: routes.rs
firefly-tracker/backend/src/config/: mod.rs
firefly-tracker/backend/src/firefly/: client.rs  mod.rs
firefly-tracker/backend/src/models/: mod.rs
firefly-tracker/frontend/: index.html  package.json  (+1 more)
frontend/: PWA_ICON_REQUIREMENTS.md  TYPE_IMPORT_FIX.md  index.html  package-lock.json  package.json
src/: main.rs
templates/: dashboard.html
(+141 files in other folders)
