[package]
name = "rustler"
version = "0.1.0"
edition = "2024"
description = "A personal finance application"

[dependencies]
# Web framework
axum = "0.8.4"
tower = "0.4.13"
tower-http = { version = "0.6.6", features = ["fs", "trace", "cors"] }
tokio = { version = "1.36.0", features = ["full"] }
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "time", "uuid", "chrono"] }
dotenvy = "0.15.7"

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# Templates
askama = "0.12.1"

# Utilities
chrono = { version = "0.4.34", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.37.2", features = ["serde-with-float"] }
rust_decimal_macros = "1.34.3"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# HTTP client for API requests
reqwest = { version = "0.11", features = ["json"] }

# CSV parsing
csv = "1.3"

[dev-dependencies]
anyhow = "1.0.79"
