[package]
name = "firefly-tracker-backend"
version = "0.1.0"
edition = "2024"
description = "Backend for Firefly III account tracker"

[dependencies]
# Web framework
axum = "0.7.4"
tower-http = { version = "0.5.0", features = ["cors"] }
# HTTP client
reqwest = { version = "0.11", features = ["json"] }
# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async runtime
tokio = { version = "1.35", features = ["full"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Utilities
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# For caching
dashmap = "5.5"
# For configuration
config = "0.13"
